@@ -12,13 +12,15 @@ Define build options here.
 * **readMe** (optional, default: docs/readme.txt) - Path to readme file
 * **license** (optional, default: docs/license.txt) - Path to license file
 * **changeLog** (optional, default: docs/changelog.txt) - Path to change log file
+* **schemaPath** (optional, default: /core/components/$lowCaseName$/model/schema/$lowCaseName$.mysql.schema.xml) - Path to the XML schema file
 * **setupOptions** (optional) - Setup options object
 
 #### Example
 ```json
 {
     "build":{
-        "readme": "docs/readme.txt"        
+        "readme": "docs/readme.txt",        
+        "schemaPath": "_build/schema/mypackage.mysql.schema.xml"
     }
 }
 ```
